adding base models, services, cognito auth on startup

--- a/TaskManagement/appsettings.json
+++ b/TaskManagement/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AWS": {
+    "Region": "eu-north-1",
+    "UserPoolClientId": "6ehqfkvimo919rm8prbu4s6tqd",
+    "UserPoolClientSecret": "v1o1nvkm4l2im6nvmnhc5r2joub158fctr8pp1v2jr3i3ipbvb8",
+    "UserPoolId": "eu-north-1_zmzBm4vca"
+  },
   "AllowedHosts": "*"
 }
