added task and project management code- controllers, services and repositories, with sqlite database using efcore and aws cognito authentication, as well as unit tests with xunit.

--- a/TaskManagement/appsettings.json
+++ b/TaskManagement/appsettings.json
@@ -2,14 +2,21 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
-  "AWS": {
-    "Region": "eu-north-1",
-    "UserPoolClientId": "6ehqfkvimo919rm8prbu4s6tqd",
-    "UserPoolClientSecret": "v1o1nvkm4l2im6nvmnhc5r2joub158fctr8pp1v2jr3i3ipbvb8",
-    "UserPoolId": "eu-north-1_zmzBm4vca"
+  "Cognito": {
+    "Authority": "https://cognito-idp.eu-north-1.amazonaws.com/eu-north-1_L0Iw5900g",
+    "ClientId": "56vad4v7nsn6sh9cnn6av0ardg",
+    "AuthUri": "https://eu-north-1l0iw5900g.auth.eu-north-1.amazoncognito.com/oauth2/token",
+    "UserPoolId": "eu-north-1_L0Iw5900g",
+    "AccessKey": "AKIAZ5EI35IXYRCLHBOO",
+    "SecretAccessKey": "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"
+  },
+  "ConnectionStrings": {
+    "SQLLiteDefault": "DataSource=projects.db"
   },
   "AllowedHosts": "*"
 }
