added ViewModels, patched AuthController, patched tests with models, added placeholders and test data in db

--- a/TaskManagement/appsettings.json
+++ b/TaskManagement/appsettings.json
@@ -12,8 +12,8 @@
     "ClientId": "3qf5tefffn9tsk82eev2slsa32",
     "AuthUri": "https://eu-north-1l0iw5900g.auth.eu-north-1.amazoncognito.com/oauth2/token",
     "UserPoolId": "eu-north-1_L0Iw5900g",
-    "AccessKey": "AKIAZ5EI35IXYRCLHBOO",
-    "SecretAccessKey": "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"
+    "AccessKey": "<Enter access key PROVIDED IN MAIL>",
+    "SecretAccessKey": "<Enter access secret PROVIDED IN MAIL>"
   },
   "ConnectionStrings": {
     "SQLLiteDefault": "DataSource=projects.db"
